@@ -63,7 +63,7 @@ public class OAVWeakIdGenerator implements IOAVIdGenerator
 		if(state.containsObject(ret))
 			throw new RuntimeException("No free id available.");
 		
-		counters.put(type, new Long(id));
+		counters.put(type, Long.valueOf(id));
 		
 //		System.out.println("generated: "+ret);
 		return ret;
